# resman

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  coverage.sh  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
examples/: simple.rs
src/: cell.rs  cell_ref.rs  cell_ref_mut.rs  entry.rs  fn_res.rs  fn_res_impl.rs  fn_res_mut.rs  fn_res_mut_impl.rs  fn_res_once.rs  fn_res_once_impl.rs  fn_resource.rs  fn_resource_impl.rs  fn_resource_meta_impl.rs  into_fn_res.rs  into_fn_res_mut.rs  into_fn_res_once.rs  lib.rs  ref.rs  ref_mut.rs  resource.rs  resource_fetch_error.rs  resources.rs
