[package]
name = "resman"
version = "0.6.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Runtime managed resource borrowing."
repository = "https://github.com/azriel91/resman"
documentation = "https://docs.rs/resman/"
readme = "README.md"
keywords = ["data", "share", "lock"]
license = "MIT OR Apache-2.0"

[dependencies]
downcast-rs = "1.2.0"
rt_map = "0.5.0"

[features]
default = []
debug = []
fn_res = []
